# website-browser-extension-communication

./: .dprintrc.json  README.md  diagram.puml  wallet-interaction.puml
extension/: Cargo.toml  package.json  rollup.config.js
extension/src/: app.rs
extension/src/background/: Cargo.toml
extension/src/background/src/: lib.rs
extension/src/content/: Cargo.toml  package.json  rollup.config.js
extension/src/content/src/: lib.rs
extension/src/in_page/: Cargo.toml
extension/src/in_page/src/: lib.rs
extension/src/js/: popup_script.js
extension/src/wasm_bindgen_extension/: Cargo.toml
extension/src/wasm_bindgen_extension/src/: lib.rs
extension/src/wasm_bindgen_extention/: Cargo.toml
extension/src/wasm_bindgen_extention/src/: lib.rs
extension/static/: background_script.js  content_script.js  index.html  manifest.json  popup.html
web-app/src/: App.tsx
