[package]
name = "background"
version = "0.1.0"
authors = ["Philipp Hoenisch <philipp@hoenisch.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3.47"
features = []