[package]
name = "content"
version = "0.1.0"
authors = ["Philipp Hoenisch <philipp@hoenisch.at>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3.47"
features = []